--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    /* --primary: 221.2 83.2% 53.3%; this was the default coming from shadui*/
+    /* --primary: 221.2 83.2% 53.3%; this was the default coming from shadcn ui*/
 		--primary: 196 100% 47%;
     --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
